Moved CSS out of main list page and fixed z-index problem

--- a/media/lies.css
+++ b/media/lies.css
@@ -69,3 +69,9 @@ body {
 #bd #description b {
     font-variant: small-caps;
 }
+
+#bd #vote {
+    visibility:hidden;
+    z-index:2;
+    position:absolute;
+}
